[package]
name = "dnd-token-pusher"
version = "0.1.0"
authors = ["Waldemar <waldemar.schwan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
pixels = "0.2.0"
winit = "0.22.0"
winit_input_helper = "0.6.0"
image = "0.23.12"
rand = "0.7.3"
caith = "3.1.0" # dice roller
tetra="0.5.6"
structopt = "0.3.21"
